--- a/creind.html
+++ b/creind.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="header">
-	<h1>Creativity.India</h1>
+	<h1> Creativity.India </h1>
 </div>
 <div id="main">
 	<h3>Were we let in for our looks? No. Will we be judged on your creativity? Yes.</h3>
@@ -37,7 +37,7 @@
 	<a href="#"></a>
 	<br />
 	<a href="index.html">Home</a>
-	<a href="about.html">About</a>
+	<a href="">About</a>
 	<a href="submit.html">Submit</a>
 	<a href="rankings.html">Rankings</a>
 </div>
