--- a/creind.html
+++ b/creind.html
@@ -38,7 +38,7 @@
 	<br />
 	<a href="index.html">Home</a>
 	<a href="">About</a>
-	<a href="submit.html">Submit</a>
+	<a href="">Submit</a>
 	<a href="rankings.html">Rankings</a>
 </div>
 <script src="javascript.js"></script>
