--- a/creind.html
+++ b/creind.html
@@ -39,7 +39,7 @@
 	<a href="index.html">Home</a>
 	<a href="">About</a>
 	<a href="">Submit</a>
-	<a href="rankings.html">Rankings</a>
+	<a href="">Rankings</a>
 </div>
 <script src="javascript.js"></script>
 </body>
