--- a/creind.html
+++ b/creind.html
@@ -10,7 +10,7 @@
 	<h1> Creativity.India </h1>
 </div>
 <div id="main">
-	<h3>Were we let in for our looks? No. Will we be judged on your creativity? Yes.</h3>
+	<h3> Were we let in for our looks?  No!!! Will we be judged on your creativity</h3>
 	<h2>Which one you like? Click to Choose.</h2>
 	<table>
 		<tr>
