--- a/creind.html
+++ b/creind.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="body.css">
-	<title>CreativityIndia</title>
+	<title>Creativity.India</title>
 </head>
 <body>
 
